Revision history for HTTP-Daemon

{{$NEXT}}

6.13      2022-02-09 20:39:12Z
  - Bump minimum IO::Socket::IP version to 0.32 (GH#50) (Olaf Alders)

6.12      2020-06-04 16:01:31Z
  - No changes since TRIAL release 6.11

6.11      2020-06-03 14:47:21Z (TRIAL RELEASE)
  - An IPv6 zone separator must be URI-quoted (GH#47) (Petr Pisar and Olaf
    Alders)

6.10      2020-05-26 16:20:36Z
  - No changes since TRIAL release 6.09

6.09      2020-05-25 16:52:14Z (TRIAL RELEASE)
  - Require IO::Socket::IP 0.25 so that HTTP::Tiny uses it (GH#45) (Shoichi Kaji)

6.08      2020-05-22 15:26:00Z (TRIAL RELEASE)
  - In t/chunked.t, leave choosing IP address family to IO::Socket::IP (GH#42) (Shoichi Kaji)
  - Add "IPv6 SUPPORT" section to pod (GH#43) (Shoichi Kaji)
  - Use HTTP::Tiny 0.042+ for IPv6 support (GH#41) (Shoichi Kaji)

6.07      2020-05-19 19:19:53Z (TRIAL RELEASE)
  - Prefer IP address for host in $d->url (GH#40) (Shoichi Kaji)
  - Improve documentation readability (GH#36) (Ferenc Erki)

6.06      2019-08-29 14:23:17Z
  - Delimit IPv6 numeric address with brackets and URI-quote an IPv6 zone
    separator in url() method output (GH#32) (Petr Pisar)
  - Handle undef and empty LocalAddr value in new() constructor as an
    unspecified address (GH#24, RT#123069) (Petr Pisar)
  - Use IO::Socket::IP for IPv6 support. (GH#31) (Chase Whitener)

6.05      2019-07-26 20:41:05Z
  - Added the .perltidyrc from the libwww-perl distribution
  - Tidied the test suite with perltidy
  - Tidied Daemon.pm
  - Turned on EOL and tab tests
  - Removed obvious indirect object syntax in test suite
  - Added IPv6 support. (GH#24) Thanks, @ppisar and @intrigeri
  - Added IO::Socket::IP as a prerequisite rather than IO::Socket::INET

6.04      2019-04-02 13:09:45Z
  - Remove circular dependency on LWP::RobotUA introduced in 6.02 (GH#29)
    (Olaf Alders)

6.03      2019-04-01 20:56:38Z
  - Remove circular dependency with LWP::UserAgent introduced in 6.02 (GH#27)
    (Olaf Alders)
