@@ -15,50 +15,39 @@ on:
 jobs:
   build:
     name: Build distribution
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 1
+    runs-on: ubuntu-20.04
     container:
       image: perldocker/perl-tester:5.34
     steps:
       - uses: actions/checkout@v2
-      - name: Install author deps
-        run: dzil authordeps | xargs cpm install -g --show-build-log-on-failure
-      - name: dzil stale
-        run: dzil stale | xargs cpm install -g --show-build-log-on-failure
-      - name: Build
-        run: dzil build --no-tgz --in dzil_build_dir
-      - name: Maybe skip Changes test
-        if: github.ref == 'refs/heads/master'
-        run: rm dzil_build_dir/xt/release/changes_has_content.t && perl -pi -e "s|'xt/release/changes_has_content.t'||g" dzil_build_dir/xt/author/*
+      - name: Run Tests
+        env:
+          AUTHOR_TESTING: 1
+          AUTOMATED_TESTING: 1
+          EXTENDED_TESTING: 1
+          RELEASE_TESTING: 1
+          TEST_TIDYALL_VERBOSE: 1
+        run: auto-build-and-test-dist
       - uses: actions/upload-artifact@v2
         with:
           name: build_dir
-          path: dzil_build_dir
-      - name: Install deps
-        if: success()
-        run: >
-          cd dzil_build_dir
-          && cpm install -g
-          --cpanfile cpanfile
-          --with-develop
-          --with-recommends
-          --with-suggests
-          --show-build-log-on-failure
-      - name: Run Tests with coverage
-        if: success()
+          path: build_dir
+  coverage-job:
+    needs: build
+    runs-on: ubuntu-20.04
+    container:
+      image: perldocker/perl-tester:5.34
+    steps:
+      - uses: actions/checkout@v2 # codecov wants to be inside a Git repository
+      - uses: actions/download-artifact@v2
+        with:
+          name: build_dir
+          path: .
+      - name: Install deps and test
+        run: cpan-install-dist-deps && test-dist
         env:
-          AUTHOR_TESTING: 1
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
           HARNESS_PERL_SWITCHES: "-MDevel::Cover=+ignore,^local/|^t/|^xt"
-          RELEASE_TESTING: 1
-        run: >
-          cpm install -g
-          --show-build-log-on-failure
-          Devel::Cover::Report::Codecov &&
-          cd dzil_build_dir
-          && prove -lr --jobs 2 t xt
-          && cover -report codecov
   test_linux:
     runs-on: ubuntu-latest
     name: Perl ${{ matrix.perl-version }} on ubuntu-latest
